# elotto

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.ps1
docs/: PLAN_4NODE.md
main/: CMakeLists.txt  elotto.c  sensor.c  sensor.h
