idf_component_register(
    SRCS
        "elotto.c"
        "sensor.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        freertos
        esp_hw_support
        nvs_flash
        esp_timer
        esp_eth
        esp_netif
        esp_event
        esp_http_server
        esp_hw_support
        esp_driver_uart
)
